--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,92 +11,121 @@
             type="com.core.vpnmodule.MainViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:background="@color/white">
+        android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="@{(viewModel.vpnStatus == VpnStatus.CONNECTING || viewModel.vpnStatus == VpnStatus.DISCONNECTING) ? View.VISIBLE : View.INVISIBLE}"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/startBtn"/>
-
-        <EditText
-            android:id="@+id/server"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="输入服务器地址"
-            android:enabled="@{viewModel.enable}"
-            android:text="@={viewModel.server}"
-            android:layout_marginTop="20dp"
-            app:layout_constraintWidth_percent="0.8"
-            app:layout_constraintTop_toBottomOf="@+id/status"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/port"
-            android:inputType="number"
-            android:digits="1234567890."
-            android:clickable="true"
-            android:focusable="true"/>
-
-        <EditText
-            android:id="@+id/port"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="输入端口(可输入多个，用“,”隔开)"
-            android:text="@={viewModel.port}"
-            android:enabled="@{viewModel.enable}"
-            app:layout_constraintWidth_percent="0.8"
-            app:layout_constraintTop_toBottomOf="@+id/server"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/startBtn"
-            android:inputType="number"
-            android:digits="1234567890.,"
-            android:clickable="true"
-            android:focusable="true"/>
-
-        <Button
-            android:id="@+id/startBtn"
-            android:layout_width="210dp"
-            android:layout_height="60dp"
-            android:text="Auto"
-            android:textAllCaps="false"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/port"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <Button
-            android:id="@+id/disconnectBtn"
-            android:layout_width="210dp"
-            android:layout_height="60dp"
-            android:text="Disconnect"
-            android:textAllCaps="false"
-            app:layout_constraintTop_toBottomOf="@+id/startBtn"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <TextView
-            android:id="@+id/status"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="@{viewModel.getStatusString(viewModel.vpnStatus)}"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/progress"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/server"/>
+            android:layout_height="match_parent"
+            tools:context=".MainActivity"
+            android:background="@color/white">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="@{(viewModel.vpnStatus == VpnStatus.CONNECTING || viewModel.vpnStatus == VpnStatus.DISCONNECTING) ? View.VISIBLE : View.INVISIBLE}"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/startBtn"/>
+
+            <EditText
+                android:id="@+id/server"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="输入服务器地址"
+                android:enabled="@{viewModel.enable}"
+                android:text="@={viewModel.server}"
+                android:layout_marginTop="20dp"
+                app:layout_constraintWidth_percent="0.8"
+                app:layout_constraintTop_toBottomOf="@+id/status"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/port"
+                android:inputType="number"
+                android:digits="1234567890."
+                android:clickable="true"
+                android:focusable="true"/>
+
+            <EditText
+                android:id="@+id/port"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="输入端口(可输入多个，用“,”隔开)"
+                android:text="@={viewModel.port}"
+                android:enabled="@{viewModel.enable}"
+                app:layout_constraintWidth_percent="0.8"
+                app:layout_constraintTop_toBottomOf="@+id/server"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/startBtn"
+                android:inputType="number"
+                android:digits="1234567890.,"
+                android:clickable="true"
+                android:focusable="true"/>
+
+            <Button
+                android:id="@+id/startBtn"
+                android:layout_width="210dp"
+                android:layout_height="60dp"
+                android:text="Auto"
+                android:textAllCaps="false"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/port"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <Button
+                android:id="@+id/disconnectBtn"
+                android:layout_width="210dp"
+                android:layout_height="60dp"
+                android:text="Disconnect"
+                android:textAllCaps="false"
+                app:layout_constraintTop_toBottomOf="@+id/startBtn"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <Button
+                android:id="@+id/getInfo"
+                android:layout_width="210dp"
+                android:layout_height="60dp"
+                android:text="ConnectionInfo"
+                android:textAllCaps="false"
+                app:layout_constraintTop_toBottomOf="@+id/disconnectBtn"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="@{viewModel.getStatusString(viewModel.vpnStatus)}"
+                android:textSize="18sp"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/progress"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/server"/>
+
+            <TextView
+                android:id="@+id/contentionInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.connectionInfoBuilder}"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:layout_marginTop="20dp"
+                android:paddingHorizontal="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/getInfo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </layout>
